Adds HATEOAS support to controllers
Enables HATEOAS (Hypermedia as the Engine of Application State) support, improving API discoverability and evolvability.

Adds HateoasConfig to enable HAL.

Updates controllers (Cliente, Compra, Detalle, Producto, Region, Sucursal, Comuna) to include HATEOAS links in responses, allowing clients to navigate the API more easily.

Adds constants for link relations to maintain consistency.